# chatrobot

./: .gitignore  CMakeLists.txt  README.md  asr_main.cpp  chatrobot.hpp  datatypes.hpp  dialog.cpp  generate.cpp  init_audio.cpp  init_threads.cpp  init_xf.cpp  main.cpp  play.cpp  recognize.cpp  record.cpp  robot.bnf
msc/4aeab7b3086f1af89896dcbfd4eaffbd/: u.data  urec.data
xf/samples/iat_sample/: iat_sample.c
